--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <footer class="footer">
   <div class="container text-center">
     <small class="copyright">© 2026 Uphando Education Support Initiative</small>
-    <br>
-    <small class="copyright">Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a></small>
+    <!--<br>
+    <small class="copyright">Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a></small>-->
   </div><!--//container-->
 </footer><!--//footer-->
