--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -113,6 +113,23 @@
   margin-top: 10px;
 }
 
+// Team section styling
+.team {
+  padding: 80px 0 40px 0;
+  background: #fff;
+  border-top: 3px solid $medical-red;
+  border-bottom: 3px solid $medical-red;
+}
+.team .title {
+  color: $medical-dark;
+  margin-top: 0;
+  margin-bottom: 15px;
+}
+.team-intro {
+  font-size: 18px;
+  color: $medical-grey;
+  margin-bottom: 50px;
+}
 .team .row {
   display: flex;
   flex-wrap: wrap;
@@ -145,4 +162,38 @@
   object-fit: cover;
   border: 4px solid $medical-red;
   margin: 0 auto;
+}
+.team-name {
+  font-size: 22px;
+  font-weight: 700;
+  margin-bottom: 5px;
+  color: $medical-dark;
+}
+.team-role {
+  font-size: 14px;
+  font-weight: 600;
+  color: $medical-red;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: 15px;
+}
+.team-description {
+  font-size: 15px;
+  color: $medical-grey;
+  line-height: 1.6;
+  flex-grow: 1;
+}
+.team-contact {
+  margin-top: 15px;
+}
+.team-contact a {
+  color: $medical-dark;
+  text-decoration: none;
+}
+.team-contact a:hover {
+  color: $medical-red;
+  text-decoration: underline;
+}
+.team-contact .fa {
+  margin-right: 5px;
 }
