--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,6 +6,14 @@
 //
 // Set color scheme
 //
+// Color scheme - Medical (white background, red highlights, black text)
+//
+$color: #ffffff;
+$color-2: #C41E3A;
+$medical-red: #C41E3A;
+$medical-dark: #1a1a1a;
+$medical-grey: #1a1a1a;
+//
 
 {% if site.color_scheme == "one" %}
   $color: #17baef;
