--- a/assets/_sass/_default.scss
+++ b/assets/_sass/_default.scss
@@ -276,10 +276,10 @@ pre code {
   color: darken($color, 30%);
   font-size: 18px;
 }
-/* ======= Join Section ======= */
+/* ======= Join Section ======= background: $color; */
 .join {
   padding: 80px 0;
-  background: $color;
+  background: #f5f5f5;
   color: #fff;
 }
 .join .title {
